--- a/views/form.ejs
+++ b/views/form.ejs
@@ -6,6 +6,7 @@
     <title>Sorteio Miniatura Átila Abreu</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="https://static.trindadetecnologia.com.br:8443/scripts/indicacao-api.js?v=fba36419-6c3d-4b97-8d6d-955bd95a545a"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
@@ -56,6 +57,14 @@
                         <input class="form-check-input" type="radio" name="possuiplano" id="possuiSim"type="checkbox" value="Sim" required>
                         <label class="form-check-label" for="possuiSim">Sim</label>
                     </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-check aceiteTermos" >
+                    <input class="form-check-input" type="checkbox" id="aceiteTermos" required checked>
+                    <label class="form-check-label" for="aceiteTermos">
+                        Concordo em compartilhar os meus dados com a corretora AllCross e suas <a href="https://allcross.com.br/politica-de-privacidade-e-lgpd" target="_blank"> politicas de privacidade e LGPD</a>. Assim como estou ciente de que receberei um contato de um corretor para uma <strong>cotação gratuita</strong> de planos de saúde e/ou odontológicos.
+                    </label>
                 </div>
             </div>
             <button type="submit" class="btn btn-primary" id="enviarLead">Enviar</button>
